tests/Call.prop.2.13-new.check
// exitCode: 1
tests/Call.prop.scala:4: error: not enough arguments for method apply: (i: Int): Char in class StringOps.
Unspecified value parameter i.
  prop()
      ^
1 error
