tests/Call.prop.scala
class Test {
  def prop = ""
  prop
  prop()
}
